[CODE] Migrate sequalize typescript to regular sequalize
